pub and speakers

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -534,15 +534,14 @@ engineering designs, and analysis pipelines. All Collaboration members agree to 
 %All Collaboration members agree to the publication policy upon joining, and if they leave the Collaboration, they are bound by it for two years afterward.
 
 {\color{red} 
-The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the collaboration for ratification by the voting members.
+The Publication and Speakers Committee will continue to refine the policy, and present a revision one year after the establishment of the Collaboration for ratification by its voting Members.
 }
 
 \subsection{Organization}
 The execution of the policy shall be overseen by the Publication and Speakers Committee and its sub-committees (\S\ref{sec:pubcouncil}). 
 {\color{red} The Science Council (\S\ref{sec:SC}) approves all projects that lead to publications.
-The Science Council in addition establishes a slate of project categories that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals, producing a coherent plan.
-%  The Science Council in addition establishes a slate of projects categories that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals for carrying out these projects, producing a coherent plan.
-  This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
+Also, in carrying out its duty to produce a coherent plan for advancing the Collaboration's key science goals, the Science Council establishes a slate of project categories and solicits the Working Groups for detailed proposals. %  The Science Council in addition establishes a slate of projects categories that advance the Collaboration's key science goals, and it solicits the Working Groups for detailed proposals for carrying out these projects, producing a coherent plan.
+This is done in consultation with the ET and in accordance with the Spokepersons' yearly plan.}
 The Spokespersons will help to navigate and resolve potential conflicts.
 The Membership Committee will keep track of active Collaboration members and Legacy Members for the purposes of establishing author lists for papers.
 
@@ -601,7 +600,7 @@ The project leader and the project team have the responsibility to draft the pub
 
 This internal review committee consists of a primary and a secondary reviewer who have the responsibility that the Collaboration's publications are of uniform and high quality.  The reviewers are not current members of the Publication Board, but the Publication Board assigns one of its members to oversee the review of the paper as a rapporteur.  At least one of the reviewers or rapporteur should be a senior scientist who can insulate junior participants (whether authors, reviewers, or rapporteurs) from unfair criticism, if it occurs.
 
-The Publication Board will notify the full Collaboration that the internal review committee has formed.  Collaboration members may comment on the draft at any time, but when the authors are ready, the Publication board will send an announcement of a formal three-week comment period.  After the this comment period, the reviewers will provide a written report on the paper to the authors and Publication Board.
+The Publication Board will notify the full Collaboration that the internal review committee has formed.  Collaboration members may comment on the draft at any time, but when the authors are ready, the Publication board will send an announcement of a formal three-week comment period.  After this comment period, the reviewers will provide a written report on the paper to the authors and Publication Board.
 
 All public comments, from Collaboration members and from reviewers, are to be posted to a centralized location maintained by the Publication Board, along with the authors' responses.  All Collaboration members have access to these previously asked questions and responses.
 
@@ -634,17 +633,18 @@ The role of the Speakers Bureau is to help Collaboration members give more and b
 \item Solicit invitations to conferences and identify good venues for contributed talks.
 \item Actively solicit speakers for invitations or notable conferences with no volunteer speakers. Priority and consideration should be given to the teams from projects where alphabetical author lists may obscure their role. 
 \item Promptly respond to requests for speakers from conference organizers and act as a point-of-contact for people who want some CMB-S4 speaker but do not have specific ideas.
+\item {\color{red} Serve as a clearinghouse for talk invitations forwarded from any member.}
 \item Curate a library of standard plots and slides for speakers to use in talks.
-\item Maintain a library of past CMB-S4 talks.
+\item {\color{red}Maintain records of all presentation given in the name of the Collaboration} and a library of past CMB-S4 talks.
 \item Address overlap from multiple requests to give talks on the same subject at the same conference, ideally by suggesting focus changes to make them on different topics. Talk prioritization will be at the committee's best judgment, but should reflect contributions to the topic in question, career status, whether the speaker was invited, and other similar factors.
 \end{itemize}
 
 
 {\color{red}
-Any member invited to give a talk at a conference or workshop must forward that request, upon receipt, to the Speakers Bureau.  The Speakers Bureau will determine whether an alternate person is more appropriate to give the talk considering 
+Any Member invited to give a talk primarily focused on CMB-S4, e.g., on the instrument, projections or science results, at a conference or workshop must forward that request upon receipt and before acceptance to the Speakers Bureau.  The Speakers Bureau will work with the invited Member to determine whether they should suggest that a more appropriate Member be invited to give the talk, after considering 
 the contributions of various members to the collaboration, the desire to promote junior members, and the fair distribution of opportunities to give talks.
 
-To give talks not in the above category, a Collaboration member must notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
+To give talks not in the above category, a Collaboration member must also notify the Speakers Bureau. This ensures that the Speakers Bureau has a chance to address overlapping talk requests or locate another appropriate speaker in the case of declined invitations.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The Speakers Bureau need not be informed of talks on other subjects that contain brief advertisements for CMB-S4 or of invited presentations that must remain confidential for programmatic reasons (e.g.~certain agency reviews or presentations to private foundations or donors).
 
 %Final public oral presentations for thesis student have greater flexibility and may show unreleased data, but it is the responsibility of the student and advisor to maintain confidentiality of results.
 
@@ -652,12 +652,13 @@ Collaboration members must send abstracts and titles to the Speakers Bureau at l
 
 All talks must maintain confidentiality for the project's results.
 Any unpublished results shown in talks must be approved for public release by the Science Council before being shown. Such results should be marked ``CMB-S4 PRELIMINARY'' on slides until publication.
-Talks showing only pre-approved results do not require separate approval from the collaboration, but the Speakers Bureau should be informed about the talk.
+Pre-approved results do not require re-approval from the collaboration for separate talks, although the Speakers Bureau still needs to be notified about the talk.
 
+
+
+
+\sout{The Speakers Bureau will maintain records of all presentations given in the name of the Collaboration, and serve as a clearinghouse for talk invitations forwarded from any member. This struck out text was moved to bullets at beginning of section.}
 }
-
-
-The Speakers Bureau will maintain records of all presentations given in the name of the Collaboration, and serve as a clearinghouse for talk invitations forwarded from any member.  
 
 \subsection{Violations of the Policy and Remedies}
 Violations of the policy will be addressed by the Publication Board, which will forward violations and recommend a remedy to the Executive Team.  Minor infractions will receive a warning, while repeated or severe infractions may warrant suspension from project teams or Working Group activities, removal from such groups, or expulsion from the Collaboration as determined by the Governance Board.
@@ -665,9 +666,7 @@ Violations of the policy will be addressed by the Publication Board, which will 
 
 \section{Ombudspersons}
 
-{\bf This section is drawn from the LSST DESC Code of Conduct} which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}
-
-CMB-S4 has two Ombudspersons who are available to members of the Collaboration. The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is  \textcolor{red}{to be outlined in a CMB-S4 Code of Conduct which will be determined following the formation of the Collaboration}. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. \textbf{They will not hold any other leadership positions within the Collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
+CMB-S4 has two Ombudspersons who are available to members of the Collaboration.\footnote{This section is drawn from the LSST DESC Code of Conduct which is licensed under Creative Commons CC0 1.0 \url{https://creativecommons.org/publicdomain/zero/1.0/}} The role of the Ombudspersons is to provide informal, confidential, nonjudgmental, impartial, and independent advice and arrange mediation for CMB-S4 members for the purposes of dispute resolution. Confidentiality is a privilege of the Ombudspersons and the only circumstances that there may be an exception to confidentiality is if the Ombudsperson is concerned by an imminent risk of serious harm, or if required by law in the applicable jurisdiction to anonymously report credible evidence of fraud, waste, or abuse concerning the use of government funds. As such, communications with an Ombudsperson do not constitute formal notice to the Collaboration or the individual's institute. If the individual would like to start formal proceedings, the Ombudsperson can provide guidance on the CMB-S4 process and referrals for institutional processes. The CMB-S4 process for formal complaints is  \textcolor{red}{to be outlined in a CMB-S4 Code of Conduct which will be determined following the formation of the Collaboration}. There are two CMB-S4 Ombudspersons to provide a choice of whom to speak with, and to ensure that there is at least one Ombudsperson available at Collaboration meetings. The Ombudspersons are available to CMB-S4 members who are experiencing conflicts or disputes as part of their CMB-S4 activities. The Ombudspersons will work together with the members who consult them to identify options for managing and resolving disputes and conflicts. This includes providing advice and support, referring individuals to appropriate resources, organizing informal mediation, and ensuring that the CMB-S4 Spokesperson is made aware of any systemic issues in the Collaboration. The Ombudspersons term of 2 years, with the option of renewal. Due consideration will be given to the diversity of the candidates when the Ombusdspersons are selected. The Ombudspersons will be full members of CMB-S4, with a strong understanding of the organizational structure of the Collaboration. \textbf{They will not hold any other leadership positions within the Collaboration and will report only to the \shorte.} They must become members of the International Ombudsman Association and familiarize themselves with the extensive materials available on their website. \url{https://www.ombudsassociation.org}
 
 CMB-S4  has chosen to adopt the role and function of the Ombudsperson as expressed by the International Ombudsman Association (with some additions and edits for gender neutrality):\url{https://www.ombudsassociation.org/Resources/Frequently-Asked-Questions/What-is-anOrganizational-Ombudsman}
 
