--- a/bylaws.tex
+++ b/bylaws.tex
@@ -160,7 +160,7 @@ The secretary of the GB is chosen informally by the GB Chair to serve during the
 
 
 \subsection{Governing Board Meetings}
-The first Governing Board will establish rules for its meetings after electing its Chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. \textcolor{red}{Such meetings will occur approximately twice per year in closed session at every Collaboration meeting and additional meetings will be held by telephone or video conference.} Special meetings can be called on the initiative of the GB chair or at the request of another GB Member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
+The first Governing Board will establish rules for its meetings after electing its Chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. \textcolor{red}{Such meetings will occur approximately twice per year in closed session at every Collaboration meeting and additional meetings will be held by telephone or video conference.  \sout{Special meetings can be called on the initiative of the GB chair or at the request of another GB Member.} The GB Chair may call special meetings as needed.}  The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB Chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB Members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
 GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full Collaboration by the GB Chair or GB secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB Members.
 results of any votes taken.
  It is the expectation that GB Members participate in the majority of meetings. If a GB Member fails to participate %(via meeting attendance or email) 
