fixed sections and subsections

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -278,7 +278,8 @@ The procedures for conducting the initial elections of the Collaboration are giv
 \label{fig:elect_cycle}
 \end{figure}
 
-\subsection{Elections of a Co-Spokesperson}
+%\subsection{Elections of a Co-Spokesperson}
+\subsection{Spokespersons}
 
 Co-Spokespersons are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  %presented at the GB meeting closest to January 1 each year. 
 %The Co-Spokesperson elections will occur prior to elections of the Governing board. 
@@ -312,7 +313,7 @@ In the event of a tie, a runoff election will be held between the two candidates
 If no candidate agrees to stand for election, the terminating Chair will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of their term and the additional months served by the terminating Chair to equal two years.
 
 
-\subsection{Governing Board Elections }
+\subsection{Governing Board}
 \label{sec:gb-elections}
 
 The 18 GB Members drawn Senior Members of the Collaboration are elected to two-year terms.  All Senior Members may  run for these positions. The one GB Member drawn from the Postdoctoral Members of the Collaboration is elected for a one-year term.
@@ -625,7 +626,7 @@ Any disputes regarding the review process will be resolved by the Publication Bo
 
 Graduate thesis and dissertation documents are exempted from Collaboration review, but related publications (e.g.~developed from an individual chapter) are subject to review.
 
-\subsection{Talks and Public communications}
+\subsection{Talks and Public Communications}
 %\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
 
 The role of the Speakers Bureau is to help Collaboration members give more and better talks in support of the Collaboration. In additon, the role of the Speakers Bureau is to ensure that talks get distributed among the collaboration members in a way that reflects the contributions of different members to the collaboration, their career status and the desire to promote junior members, and equity of opportunities to give talks. The duties of the Speakers Bureau are to:
@@ -724,18 +725,18 @@ For the initial election procedures the ICCC replaces the role of the GB, and an
 The elected candidates begin to serve immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their positions (one, two or three years) to June 30, 2018. 
 \textcolor{red}{As is directed for elections once the Collaboration is established, the initial elections are timed to provide Collaboration Members multiple opportunities to participate in Collaboration governance. }
 
-\subsubsection{First Election of Co-spokespersons} 
+\subsection{Spokespersons} 
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates.  \textcolor{red}{A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the two Co-Spokespersons. 
 The first Co-spokesperson terms are to be three years to enable staggered leadership elections with the other members of the Executive Team in future elections. }
 %, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
-\subsubsection{First Election Council and Committee Chairs}
+\subsection{Council and Committee Chairs}
 \textcolor{red}{The co-Chairs of the Science Council, and the Chairs of the Membership Committee and the Publication and Speakers Committee are elected to two-year terms. All Senior Members (see \S\ref{sec:memtypes}) may  run for these positions.  Prior to the election, Voting Members are asked to nominate individuals for the Chair positions to the IEVC.   Self-nominations are accepted.
 After a nomination period, the IEVC will consult with the nominees to ascertain their willingness to stand for the election. Candidates are only allowed to stand for one open position. 
 A ranked voting scheme to be approved by the ICCC prior to the election will be used to determine the Science Council co-Chairs. For the Committee chairs each Voting Member votes for a single candidate for each open Chair position. In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. }
 
 
-\subsubsection{First Election of the Governing Board}
+\subsection{Governing Board}
 \textcolor{red}{The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws, with the modification that the ICCC is to approve the ranked vote scheme to be utilized. Additionally,} prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
 To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
