org chart and ex officio

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -74,7 +74,7 @@ The CMB-S4 Construction Project (the Project) is distinct from the CMB-S4 Scienc
 \vskip 12pt
 
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion. \textcolor{red}{``Supermajority votes'' require approval by two-thirds of the entire voting body.} A ``majority vote" requires that more than half the votes received are in favor of the motion.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" Members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council Chairs (\S\ref{sec:SC}) are ex officio Members of the Executive Team (\S\ref{sec:exec}).  In these bylaws,  ``Working Groups" are open to all Collaboration Members, and ``Councils" have multiple Working Groups reporting to them, while ``Committees" do not.  
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion. \textcolor{red}{``Supermajority votes'' require approval by two-thirds of the entire voting body.} A ``majority vote" requires that more than half the votes received are in favor of the motion.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``{\it Ex officio}" Members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council Chairs (\S\ref{sec:SC}) are {\it ex officio} Members of the Executive Team (\S\ref{sec:exec}).  In these bylaws,  ``Working Groups" are open to all Collaboration Members, and ``Councils" have multiple Working Groups reporting to them, while ``Committees" do not.  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
@@ -88,7 +88,7 @@ The governance structure of the CMB-S4 Collaboration  is illustrated in Figure~\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[width=6.5in]{CMB-S4_Org_chart_+_details_v9.pdf}
+\includegraphics[width=6.5in]{CMB-S4_Org_chart_+_details_v10.pdf}
 \end{center}
 \caption{CMB-S4 Collaboration Organizational Chart}
 \label{fig:org_chart}
