minor / major amendments

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -97,7 +97,7 @@ The governance structure of the CMB-S4 Collaboration  is illustrated in Figure~\
 \section{Governing Board}
 
 The Governing Board (GB), a body whose composition is designed to be representative of the membership of the Collaboration as a whole, is the %ultimate 
-policy forming body of the Collaboration.  Its other key role is oversight of the Spokespersons and the \exec.
+policy forming body of the Collaboration.  Its other key role is oversight of the Spokespersons. {\color{red} \sout{and the \exec.}}
 
 \subsection{Scope}
 %The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of the CMB-S4 Collaboration---and to provide oversight of the Spokespersons and the \exec. %and the co-spokepersons.
@@ -122,7 +122,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 
 \item Organization of elections for Spokespersons, GB Members, and other elected Collaboration officials (see \S\ref{sec:elections}).  
 
-\item Removal of any Collaboration Member from an elected or appointed leadership role in the event of major failings of professional conduct,or gross insufficiency of performance.  Removal requires a supermajority vote of the GB.   Leadership roles include, but are not limited to, the Spokespersons, GB Members, \shorte\ Members, and Council and Committee Members and Chairs.  %See also \S\ref{sec:removal}).
+\item Removal of any Collaboration Member from an elected or appointed leadership role in the event of major failings of professional conduct, or gross insufficiency of performance.  Removal requires a supermajority vote of the GB.   Leadership roles include, but are not limited to, the Spokespersons, GB Members, \shorte\ Members, and Council and Committee Members and Chairs.  %See also \S\ref{sec:removal}).
 
 %\item Oversight of various collaboration sub-committees and councils including, but not
 %limited to: Elections, Membership, Publications, Science Council, Education and
@@ -139,7 +139,7 @@ This may include promotion of short term sub-committees established by the Spoke
 % moved the following to the start of the Scope section:  \textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
 
 \subsection{Board Representation}
-The GB is composed of 19 Members, 18 drawn from the Senior Members of the Collaboration and one drawn from the Postdoctoral Members (see \S\ref{sec:memtypes}). The Spokespersons and other Members of the \exec\ may not serve on the GB.  
+The GB is composed of 19 Members, 18 drawn from the Senior Members of the Collaboration and one drawn from the Postdoctoral Members (see \S\ref{sec:memtypes}). The Spokespersons and other Members of the \exec\ may not serve contemporaneously on the GB.  
 The length of a term of service for a Governing Board Member is two years for Senior Members and one year for the Postdoctoral Member; Members are allowed to serve at most two terms consecutively.
 To ensure that the board is truly representative of the Collaboration, prior to each GB election,  the GB and the Spokespersons (or the ICCC for the first election) will particularly encourage suitable candidates from a broad range of 
 backgrounds to self-nominate  for GB membership.  Further details on the election of GB Members is provided in  \S\ref{sec:gb-elections}.  
@@ -178,9 +178,13 @@ The GB appoints the Chair and two additional Members of the Election and Voting 
 \subsection{Amendments to the Bylaws}
 %pertaining to the Governing Board} 
 \label{subsec:amend}
-The GB may make minor amendments to the Bylaws as needed.   The GB must  include a tracking cover page with the Bylaws that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  The currently ratified version of the Bylaws must be available on a public website.  Each revised version must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification requires a supermajority of the GB.
+{\color{red} The GB may make amendments to the Bylaws as needed. Each proposed amendment must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification of the amendments requires a supermajority of the GB.  Amendments to the Bylaws which are determined to have major impact by the Spokespersons in consultation with the \shorte, and those which include amendments pertaining to the election and scope of the GB itself, must be ratified by the Collaboration.}
 
-Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself,  must be ratified by the Collaboration.  The proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. 
+The currently ratified version of the Bylaws must be available on a public website, and must include a tracking cover page that notes the document version history, including dates of amendments with short synopses of which sections were impacted.  
+
+%For each revised version must be made available to the Collaboration for review and comment for at least one month before the GB can move to ratify the amended Bylaws.  Ratification requires a supermajority of the GB.
+
+%Major amendments to the Bylaws, including amendments pertaining to the election and scope of the GB itself,  must be ratified by the Collaboration.  The proposed amendments must be approved by a supermajority vote of the GB, and made available to the Collaboration for review and comment for at least one month.  After the review period, the Voting Members of the Collaboration can  ratify the amended Bylaws with a majority vote. 
 
 \section{Co-Spokespersons}
 \label{sec:spokes}
@@ -355,7 +359,7 @@ Four of the organizational structures overseen by the Spokespersons have represe
 \textbf{The Science Council works closely with the Spokespersons to coordinate the key scientific objectives of the Collaboration}.  The Science Council is led by two co-Chairs elected by the Voting Members of the Collaboration, who also serve as Members of the \exec.   \textcolor{red}{The Science Council chairs serve with two-year terms and are limited to two consecutive terms with one year off required before standing again.}
 The remaining Members of the Science Council are the co-coordinators of the various Analysis Working Groups. These Working Groups are open to all Collaboration Members, and will be formally established by the Spokespersons.  
 
-The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}). \textcolor{red}{It is charged to work closely with the Co-Spokespersons and the Executive Team to ensure that the key science goals of the Collaboration are achieved.} 
+The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubprop}). \textcolor{red}{It is charged to work closely with the Spokespersons. and the Executive Team to ensure that the key science goals of the Collaboration are achieved.} 
 
 Each Analysis Working Group will have two co-coordinators who  serve for two-year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council Chairs will solicit self-nominations for these co-coordinator positions. The Spokespersons will appoint coordinators with the advice of the Science Council Chairs, and will consider the distribution of early and late career Members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
